# open-law

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  package.json  project.env  pyproject.toml  start_server.sh  tailwind.config.js  tox.ini  tsconfig.json
.github/workflows/: python-app.yml
app/: __init__.py
app/commands/: __init__.py
app/controllers/: __init__.py  (+22 more)
src/: activeNotifications.ts  addSection.ts  addSubCollection.ts  approve.ts  books.ts  checkBoxTree.ts  checkBoxTree_v2.ts  comment.ts  contributors.ts  copyLink.ts  deleteCollection.ts  deleteContributor.ts  deleteInterpretation.ts  deleteSection.ts  deleteSubCollection.ts  drag_and_drop.ts  editInterpretations.ts  flash.ts  indeterminateInputs.ts  initQuill.ts  initQuillReadOnly.ts  interpretations.ts  main.ts  multipleInput.ts  permissions.ts  quickSearch.ts  quill.js  quillValueToInput.ts  quill_value_to_textarea.ts  refreshAccessLevelTree.ts  renameCollection.ts  renameSection.ts  renameSubCollection.ts  rightClick.ts  scroll.ts  slashSearch.ts  star.ts  styles.css  tabGoBackBtn.ts  theme.ts  (+5 more)
tests/: conftest.py  test_approve.py  test_auth.py  test_book.py  test_book_stats_properties.py  test_breadcrumbs.py  test_build_qa_url_using_interpretation.py  test_create_access_groups.py  test_create_dummy_data.py  test_fork.py  test_get_or_create_permission.py  test_init_access_groups.py  test_navigation_btns.py  test_notifications.py  test_ordering.py  test_permissions.py  test_star.py  test_tag.py  test_upvote.py  test_users.py  test_version.py  utils.py
(+243 files in other folders)
